--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,31 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="Schedule" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:layout_weight">3</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginLeft">1sp</item>
+        <item name="android:background">#ffffff</item>
+        <item name="android:minHeight">150dp</item>
+    </style>
+
+    <style name="ScheduleToptBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:layout_weight">3</item>
+        <item name="android:gravity">center</item>
+        <item name="android:minHeight">20dp</item>
+    </style>
+    <style name="ScheduleLefttBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">#eeeeee</item>
+        <item name="android:minHeight">150dp</item>
     </style>
 
 </resources>
