--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,15 @@
         android:scaleType="fitXY"
 
         />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#57000000"
         android:gravity="center"
         android:orientation="vertical"
-        >
+        android:layout_x="0dp"
+        android:layout_y="0dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
