--- a/app/src/main/res/layout/activity_studen_schedule.xml
+++ b/app/src/main/res/layout/activity_studen_schedule.xml
@@ -5,12 +5,31 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:weightSum="10"
     >
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#536bc1"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/schedule_study_choose_week"
+            android:text="@string/please_choose"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:paddingLeft="20dp"
+            />
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
+        android:layout_height="0dp"
+        android:layout_weight="8"
         android:orientation="vertical"
         android:background="#999999"
         >
@@ -291,17 +310,48 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:minHeight="80dp"
+        android:orientation="horizontal"
+        android:background="#536bc1"
         >
 
-        <TextView
-            android:layout_width="match_parent"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="1"
-            android:background="#78c8fa"
+            android:text="学习"
+            android:layout_weight="1"
+            android:background="@drawable/bottom_button"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#fffffe"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/schedule_study"
+            android:layout_margin="0dp"
+            android:padding="0dp"
+            style="@style/button_animotion"
             />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="查询"
+            android:textColor="#c5cdea"
+            android:layout_weight="1"
+            android:id="@+id/schedule_query"
+            android:background="@drawable/bottom_button"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="我"
+            android:textColor="#c5cdea"
+            android:background="@drawable/bottom_button"
+            android:layout_weight="1"
+            android:id="@+id/schedule_mine"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
