--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_marginLeft">1sp</item>
         <item name="android:background">#ffffff</item>
-        <item name="android:minHeight">150dp</item>
+        <item name="android:minHeight">125dp</item>
     </style>
 
     <style name="ScheduleToptBar" parent="Theme.AppCompat.Light.NoActionBar">
@@ -25,7 +25,10 @@
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
         <item name="android:background">#eeeeee</item>
-        <item name="android:minHeight">150dp</item>
+        <item name="android:minHeight">125dp</item>
+    </style>
+    <style name="button_animotion">
+        <item name="android:state_pressed">@anim/fade_in</item>
     </style>
 
 </resources>
