实现了第二个第三个主界面的简单布局，整体色调为蓝色时

--- a/app/src/main/res/layout/activity_studen_schedule.xml
+++ b/app/src/main/res/layout/activity_studen_schedule.xml
@@ -32,6 +32,7 @@
         android:layout_weight="8"
         android:orientation="vertical"
         android:background="#999999"
+
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,10 +41,11 @@
             android:background="#eeeeee"
             android:orientation="horizontal"
             android:minHeight="40dp"
+            android:weightSum="16"
             >
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -51,33 +53,32 @@
                 />
 
             <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="1"
                 style="@style/ScheduleToptBar"
                 />
 
             <TextView
-                android:layout_width="wrap_content"
+
                 android:layout_height="match_parent"
                 android:text="2"
                 style="@style/ScheduleToptBar"
                 />
             <TextView
-                android:layout_width="wrap_content"
+
                 android:layout_height="match_parent"
                 android:text="3"
                 style="@style/ScheduleToptBar"
                 />
             <TextView
-                android:layout_width="wrap_content"
+
                 android:layout_height="match_parent"
                 android:text="4"
                 style="@style/ScheduleToptBar"
                 />
 
             <TextView
-                android:layout_width="wrap_content"
+
                 android:layout_height="match_parent"
                 style="@style/ScheduleToptBar"
                 android:text="5"
@@ -105,10 +106,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="5"
-                        android:layout_marginBottom="1sp"
+                        android:layout_marginBottom="1px"
+                        android:weightSum="16"
+                        android:orientation="horizontal"
                         >
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="0"
@@ -116,14 +119,14 @@
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             style="@style/Schedule"
-                            android:text="1"
+                            android:text="操作系统\n艾成铭"
+                            android:textColor="#000000"
                             android:id="@+id/WeekOneClassOne"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="2"
@@ -131,7 +134,7 @@
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="3"
@@ -139,13 +142,13 @@
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="4"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="5"
@@ -157,10 +160,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="5"
-                        android:layout_marginBottom="1sp"
+                        android:layout_marginBottom="1px"
+                        android:weightSum="16"
+                        android:orientation="horizontal"
                         >
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="0"
@@ -168,36 +173,40 @@
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             style="@style/Schedule"
-                            android:text="1"
+                            android:text="操作系统\n艾成铭"
+                            android:id="@+id/WeekOneClassTwo"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="2"
+                            android:id="@+id/WeekTwoClassTwo"
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="3"
+                            android:id="@+id/WeekThreeClassTwo"
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="4"
+                            android:id="@+id/WeekFourClassTwo"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="5"
+                            android:id="@+id/WeekFiveClassTwo"
                             />
 
 
@@ -206,10 +215,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="5"
-                        android:layout_marginBottom="1sp"
+                        android:layout_marginBottom="1px"
+                        android:weightSum="16"
+                        android:orientation="horizontal"
                         >
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="0"
@@ -217,36 +228,40 @@
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             style="@style/Schedule"
-                            android:text="1"
+                            android:text="操作系统\n艾成铭"
+                            android:id="@+id/WeekOneClassThree"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="2"
+                            android:id="@+id/WeekTwoClassThree"
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="3"
+                            android:id="@+id/WeekThreeClassThree"
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="4"
+                            android:id="@+id/WeekFourClassThree"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="5"
+                            android:id="@+id/WeekFiveClassThree"
                             />
 
 
@@ -255,9 +270,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="5"
+                        android:layout_marginBottom="1px"
+                        android:weightSum="16"
+                        android:orientation="horizontal"
                         >
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="0"
@@ -265,36 +283,40 @@
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             style="@style/Schedule"
-                            android:text="1"
+                            android:text="操作系统\n艾成铭"
+                            android:id="@+id/WeekOneClassFour"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="2"
+                            android:id="@+id/WeekTwoClassFour"
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="3"
+                            android:id="@+id/WeekThreeClassFour"
                             />
 
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="4"
+                            android:id="@+id/WeekFourClassFour"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+
                             android:layout_height="match_parent"
                             style="@style/Schedule"
                             android:text="5"
+                            android:id="@+id/WeekFiveClassFour"
                             />
 
 
@@ -330,7 +352,6 @@
             android:id="@+id/schedule_study"
             android:layout_margin="0dp"
             android:padding="0dp"
-            style="@style/button_animotion"
             />
 
         <Button
