--- a/app/src/main/res/layout/activity_student_index.xml
+++ b/app/src/main/res/layout/activity_student_index.xml
@@ -5,19 +5,34 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:weightSum="10"
+    android:weightSum="11"
     >
-
-    <LinearLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#536bc1"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/student_index_choose_week"
+            android:text="@string/please_choose"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:paddingLeft="20dp"
+            />
+    </RelativeLayout>
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
-        android:orientation="vertical"
-        android:background="#999999"
+        android:id="@+id/student_index_viewpager"
         >
-
-
-    </LinearLayout>
+    </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,39 +43,41 @@
         android:background="#536bc1"
         >
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="学习"
             android:layout_weight="1"
             android:background="@drawable/bottom_button"
-            android:textColor="#c5cdea"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#fffffe"
             android:layout_centerHorizontal="true"
-            android:id="@+id/mine_study"
+            android:id="@+id/student_index_study"
             android:layout_margin="0dp"
             android:padding="0dp"
+            style="@style/OnClickText"
             />
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="查询"
             android:textColor="#c5cdea"
             android:layout_weight="1"
-            android:id="@+id/mine_query"
+            android:id="@+id/student_index_inquire"
             android:background="@drawable/bottom_button"
+            style="@style/unClickText"
             />
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="我"
-
+            android:textColor="#c5cdea"
             android:background="@drawable/bottom_button"
             android:layout_weight="1"
-            android:id="@+id/mine_mine"
-            android:textColor="#fffffe"
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:id="@+id/student_index_mine"
+            style="@style/unClickText"
             />
 
     </LinearLayout>
