--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,25 +10,41 @@
 
     <style name="Schedule" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:layout_weight">3</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:layout_marginLeft">1sp</item>
+        <item name="android:layout_marginLeft">1px</item>
         <item name="android:background">#ffffff</item>
         <item name="android:minHeight">125dp</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
     <style name="ScheduleToptBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:layout_weight">3</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:gravity">center</item>
         <item name="android:minHeight">20dp</item>
+        <item name="android:textColor">#000000</item>
     </style>
     <style name="ScheduleLefttBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
         <item name="android:background">#eeeeee</item>
         <item name="android:minHeight">125dp</item>
+        <item name="android:textColor">#000000</item>
     </style>
-    <style name="button_animotion">
-        <item name="android:state_pressed">@anim/fade_in</item>
+    <style name="bottom_textview">
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="OnClickText" parent="bottom_textview">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#fffffe</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="unClickText" parent="bottom_textview">
+        <item name="android:textColor">#c5cdea</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
 </resources>
