--- a/app/src/main/res/layout/fragment_student_schedule.xml
+++ b/app/src/main/res/layout/fragment_student_schedule.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#999999"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,11 +76,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="20"
+        android:background="#ebebeb"
 
         >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#999999"
             >
             <LinearLayout
                 android:layout_width="match_parent"
