--- a/app/src/main/res/drawable/bottom_button.xml
+++ b/app/src/main/res/drawable/bottom_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
         <shape android:shape="rectangle">
-            <solid android:color="#495fab">
+            <solid android:color="#f7e4e3e3">
             </solid>
             <corners android:radius="30dip"/>
         </shape>
