--- a/app/src/main/res/layout/fragment_student_mine.xml
+++ b/app/src/main/res/layout/fragment_student_mine.xml
@@ -9,10 +9,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="1dip"
-            android:background="#ffffff"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:background="@color/itemBackgroundColor"
             >
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="60dp"
@@ -35,7 +32,7 @@
                             android:layout_height="wrap_content"
                             android:text="学号：2014214318"
                             android:textColor="#000000"
-                            android:textSize="20dp"
+                            android:textSize="16dp"
                             android:layout_weight="1"
                             android:gravity="bottom"
                             />
@@ -46,18 +43,129 @@
                             android:textColor="#838181"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:textSize="18dp"
+                            android:textSize="15dp"
                             />
                 </LinearLayout>
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="操作"
+                    android:textColor="#8c8a8a"
+                    android:textSize="13dp"
+                    android:layout_marginLeft="10dp"
 
-        <TextView
+                    />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/itemBackgroundColor"
+            android:orientation="horizontal"
+            android:id="@+id/relativeLayout_change_password"
+            >
+                <ImageView
+                    android:id="@+id/imageview_change_password"
+                    android:layout_marginLeft="15dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/search_icon"
+                    android:layout_gravity="center"
+                    android:layout_alignParentLeft="true"
+                    />
+                <TextView
+                    android:layout_toRightOf="@id/imageview_change_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="修改密码"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_marginLeft="15dp"
+                    />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/itemBackgroundColor"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:id="@+id/relativeLayout_regist_face"
+            >
+                <ImageView
+                    android:id="@+id/imageview_regist_face"
+                    android:layout_marginLeft="15dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/search_icon"
+                    android:layout_gravity="center"
+                    android:layout_alignParentLeft="true"
+                    />
+                <TextView
+                    android:layout_toRightOf="@id/imageview_regist_face"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="人脸注册"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_marginLeft="15dp"
+                    />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/itemBackgroundColor"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:id="@+id/relativeLayout_mineInfo"
+            >
+                <ImageView
+                    android:id="@+id/imageview_mine_info"
+                    android:layout_marginLeft="15dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/search_icon"
+                    android:layout_gravity="center"
+                    android:layout_alignParentLeft="true"
+                    />
+                <TextView
+                    android:layout_toRightOf="@id/imageview_mine_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="个人信息"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:gravity="center"
+                    android:layout_marginLeft="15dp"
+                    />
+        </RelativeLayout>
+
+        <Button
+            android:layout_marginTop="35dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="1234"
-            android:textColor="#000000"
+            android:text="注销"
+            android:background="#fd6464"
+            android:textSize="16dp"
             />
 
 
