--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_marginLeft">1px</item>
         <item name="android:background">#ffffff</item>
-        <item name="android:minHeight">125dp</item>
+        <item name="android:minHeight">80dp</item>
         <item name="android:textColor">#000000</item>
     </style>
 
@@ -29,20 +29,20 @@
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
         <item name="android:background">#eeeeee</item>
-        <item name="android:minHeight">125dp</item>
+        <item name="android:minHeight">100dp</item>
         <item name="android:textColor">#000000</item>
     </style>
     <style name="bottom_textview">
         <item name="android:gravity">center</item>
     </style>
     <style name="OnClickText" parent="bottom_textview">
-        <item name="android:textSize">20dp</item>
-        <item name="android:textColor">#fffffe</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">#47c01d</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="unClickText" parent="bottom_textview">
-        <item name="android:textColor">#c5cdea</item>
+        <item name="android:textColor">#939393</item>
         <item name="android:textSize">15dp</item>
         <item name="android:textStyle">normal</item>
     </style>
