--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="actionBarBackgroundColor">#3a3b40</color>
     <color name="itemBackgroundColor">#ffffff</color>
+    <color name="textUnClickColor">#939393</color>
+    <color name="backgroundColor">#ebebeb</color>
+
 </resources>
