--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_title_hight">70dp</dimen>
     <dimen name="editItem_textSzie0">20sp</dimen>
-
+    <dimen name="title_text_size">15dp</dimen>
+    <dimen name="onclick_text_size">18dp</dimen>
+    <dimen name="unclick_text_size">16dp</dimen>
 </resources>
