--- a/app/src/main/res/layout/activity_teacher_index.xml
+++ b/app/src/main/res/layout/activity_teacher_index.xml
@@ -1,7 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:weightSum="11"
+    android:background="#ebebeb"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/actionBarBackgroundColor"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/teacher_index_choose_week"
+            android:text="@string/please_choose"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:paddingLeft="20dp"
+            />
+    </RelativeLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:id="@+id/teacher_index_viewpager"
+        >
+    </android.support.v4.view.ViewPager>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:minHeight="80dp"
+        android:orientation="horizontal"
+        android:background="#fcfcfc"
+        android:layout_marginTop="1sp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="学习"
+            android:layout_weight="1"
+            android:background="@drawable/bottom_button"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/teacher_index_study"
+            android:layout_margin="0dp"
+            android:padding="0dp"
+            style="@style/OnClickText"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="查询"
+            android:layout_weight="1"
+            android:id="@+id/teacher_index_inquire"
+            android:background="@drawable/bottom_button"
+            style="@style/unClickText"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="我"
+            android:background="@drawable/bottom_button"
+            android:layout_weight="1"
+            android:id="@+id/teacher_index_mine"
+            style="@style/unClickText"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
