调整了显示考勤界面的布局

--- a/app/src/main/res/layout/fragment_student_checking.xml
+++ b/app/src/main/res/layout/fragment_student_checking.xml
@@ -1,14 +1,110 @@
-<LinearLayout
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context="com.example.checkingsystem.student.fragment.StudentAskForLeaveFragment">
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="#000000"
-    >
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
+        android:weightSum="8"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
-</LinearLayout>
+        android:background="@color/backgroundColor"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="1sp"
+            android:background="@color/itemBackgroundColor"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="课程名称"
+                android:textColor="@color/textUnClickColor"
+                android:layout_alignParentLeft="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:layout_marginLeft="30dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="操作系统"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="#000000"
+                android:layout_marginRight="30dp"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:background="@color/itemBackgroundColor"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="上课时间"
+                android:textColor="@color/textUnClickColor"
+                android:layout_alignParentLeft="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:layout_marginLeft="30dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="周一第1节"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="#000000"
+                android:layout_marginRight="30dp"
+                />
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:background="@color/itemBackgroundColor"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="周        数"
+                android:textColor="@color/textUnClickColor"
+                android:layout_alignParentLeft="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:layout_marginLeft="30dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="第1周"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="#000000"
+                android:layout_marginRight="30dp"
+                />
+        </RelativeLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="40dp"
+            android:text="考勤"
+            android:textSize="17dp"
+            android:background="#4890cf"
 
+            />
+    </LinearLayout>
+
+</FrameLayout>
