--- a/app/src/main/res/layout/fragment_student_ask_for_leave.xml
+++ b/app/src/main/res/layout/fragment_student_ask_for_leave.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:weightSum="10"
+        android:weightSum="8"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/backgroundColor"
@@ -67,6 +67,34 @@
                 android:layout_marginRight="30dp"
                 />
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:background="@color/itemBackgroundColor"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="周        数"
+                android:textColor="@color/textUnClickColor"
+                android:layout_alignParentLeft="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:layout_marginLeft="30dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="第1周"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="#000000"
+                android:layout_marginRight="30dp"
+                />
+        </RelativeLayout>
         <LinearLayout
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
@@ -85,7 +113,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4"
+            android:layout_weight="3"
             >
             <EditText
                 android:layout_width="match_parent"
@@ -95,17 +123,22 @@
                 android:textColorHint="@color/textUnClickColor"
                 android:textSize="16dp"
                 android:textColor="#000000"
+                android:gravity="top"
+                android:padding="5dp"
+                android:maxLength="150"
+                android:textCursorDrawable="@drawable/color_cursor"
                 />
 
         </LinearLayout>
         <Button
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.2"
+            android:layout_weight="1"
             android:layout_marginTop="40dp"
             android:text="提交操作"
             android:textSize="17dp"
             android:background="#4890cf"
+
             />
     </LinearLayout>
 
