--- a/app/src/main/res/layout/fragment_teacher_checking.xml
+++ b/app/src/main/res/layout/fragment_teacher_checking.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:weightSum="10"
+        android:weightSum="8"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/backgroundColor"
@@ -67,11 +67,39 @@
                 android:layout_marginRight="30dp"
                 />
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:background="@color/itemBackgroundColor"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="周        数"
+                android:textColor="@color/textUnClickColor"
+                android:layout_alignParentLeft="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:layout_marginLeft="30dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="第1周"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="#000000"
+                android:layout_marginRight="30dp"
+                />
+        </RelativeLayout>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.2"
+            android:layout_weight="1"
             android:layout_marginTop="40dp"
             android:text="考勤"
             android:textSize="17dp"
@@ -80,7 +108,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.2"
+            android:layout_weight="1"
             android:layout_marginTop="40dp"
             android:text="课堂反馈"
             android:textSize="17dp"
