--- a/app/src/main/res/layout/fragment_student_checking.xml
+++ b/app/src/main/res/layout/fragment_student_checking.xml
@@ -96,6 +96,7 @@
                 />
         </RelativeLayout>
         <Button
+            android:id="@+id/fragment_student_checking_button"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
