修改了自己登陆的bug，加入了人脸注册，这可能还有bug，登录界面保持原来的界面

--- a/app/src/main/res/layout/fragment_teacher_mine.xml
+++ b/app/src/main/res/layout/fragment_teacher_mine.xml
@@ -136,6 +136,7 @@
         android:text="注销"
         android:background="#fd6464"
         android:textSize="16dp"
+        android:id="@+id/teacher_fragment_mine_exit"
         />
 
 
