--- a/app/src/main/res/layout/fragment_student_mine.xml
+++ b/app/src/main/res/layout/fragment_student_mine.xml
@@ -125,6 +125,7 @@
                     android:textColor="#000000"
                     android:gravity="center"
                     android:layout_marginLeft="15dp"
+                    android:id="@+id/fragment_student_mine_regist_face"
                     />
         </RelativeLayout>
         <RelativeLayout
@@ -166,6 +167,7 @@
             android:text="注销"
             android:background="#fd6464"
             android:textSize="16dp"
+            android:id="@+id/fragment_student_mine_quit"
             />
 
 
