--- a/app/src/main/res/layout/fragment_student_mine.xml
+++ b/app/src/main/res/layout/fragment_student_mine.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#ebebeb"
+    android:background="@color/backgroundColor"
     android:orientation="vertical"
     >
         <LinearLayout
@@ -19,6 +19,7 @@
                     app:civ_border_color="#FF000000"
                     android:src="@drawable/icon_head"
                     android:layout_margin="10dp"
+                    android:id="@+id/fragment_student_mine_head_picture"
                     />
 
                 <LinearLayout
@@ -35,6 +36,7 @@
                             android:textSize="16dp"
                             android:layout_weight="1"
                             android:gravity="bottom"
+                            android:id="@+id/fragment_student_school_username"
                             />
                         <TextView
                             android:layout_width="wrap_content"
@@ -44,6 +46,7 @@
                             android:layout_weight="1"
                             android:gravity="center"
                             android:textSize="15dp"
+                            android:id="@+id/fragment_student_name"
                             />
                 </LinearLayout>
 
@@ -87,12 +90,12 @@
                     />
                 <TextView
                     android:layout_toRightOf="@id/imageview_change_password"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="修改密码"
                     android:textSize="16dp"
                     android:textColor="#000000"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
                     android:layout_marginLeft="15dp"
                     />
         </RelativeLayout>
